# feedback_segmentation

./: README.md  pyproject.toml
examples/: polygons.py
src/feedback_segmentation/: __init__.py
src/feedback_segmentation/data/: __init__.py  base.py  circles.py  polygons.py  shapes.py
src/feedback_segmentation/layers/: __init__.py  dirichlet.py  equilibrium.py  feedback.py  state.py  unet.py
src/feedback_segmentation/losses/: __init__.py  base.py  evidential.py  segmentation.py
src/feedback_segmentation/metrics/: __init__.py  iou.py
