[project]
name = "feedback_segmentation"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "David Calhas", email = "david.calhas@tecnico.ulisboa.pt" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["deep feedback models", "image segmentation", "deep learning", "learning", "machine learning", "computer vision"]
requires-python = ">=3.10"
dependencies = [
	"torch==1.12.1",
	"torchvision==0.13.1",
	"segmentation_models_pytorch==0.2.0",
	"numpy==1.23.5",
	"scikit-image==0.19.3",
	"opencv-python==4.6.0.66",
	"Pillow==9.2.0",
	"six==1.16.0"
]
