[project]
name = "feedback_segmentation"
version = "0.0.1"
readme = "README.md"
authors = [{ name = "David Calhas", email = "david.calhas@tecnico.ulisboa.pt" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["deep feedback models", "image segmentation", "deep learning", "learning", "machine learning", "computer vision"]
requires-python = ">=3.10"
dependencies = [
	"torch==2.1.0",
	"torchvision==0.16.0",
	"scikit-image==0.23.2",
	"opencv-python==4.9.0.80",
	"numpy==1.24.4",
	"Pillow==10.2.0",
	"segmentation_models_pytorch==0.2.0",
	"six==1.16.0"
]
